recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:5: error: type mismatch;
 found   : Double
 required: Int
    current(length)
            ^